{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 21,
  "lineage": "56d68565-7cde-d9a2-bfde-6a8948d00413",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-28T12:53:38.307-07:00",
            "deny": [],
            "description": "Allow HTTP and HTTPS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zxiao-llm-project-2025/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc",
            "priority": 1000,
            "project": "zxiao-llm-project-2025",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.llm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-06-28T12:53:38.615-07:00",
            "deny": [],
            "description": "Allow internal traffic within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zxiao-llm-project-2025/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc",
            "priority": 1000,
            "project": "zxiao-llm-project-2025",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.llm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-28T12:53:38.055-07:00",
            "deny": [],
            "description": "Allow SSH access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zxiao-llm-project-2025/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc",
            "priority": 1000,
            "project": "zxiao-llm-project-2025",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.llm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "llm_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/zones/us-central1-a/disks/llm-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/zxiao-llm-project-2025/zones/us-central1-a/instances/llm-vm",
            "instance_id": "7658071489640120",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAAX+diIyMU1+lEMwCA7OFr5x08DydPfsQROYlhqzaHG kittyiegw@gmail.com\n"
            },
            "metadata_fingerprint": "om4024TRzkU=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release\r\ncurl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg\r\necho \"deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable\" | tee /etc/apt/sources.list.d/docker.list \u003e /dev/null\r\napt-get u [...]
            "name": "llm-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.41.139.178",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/regions/us-central1/subnetworks/llm-subnet",
                "subnetwork_project": "zxiao-llm-project-2025"
              }
            ],
            "project": "zxiao-llm-project-2025",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/zones/us-central1-a/instances/llm-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-allowed",
              "web-server"
            ],
            "tags_fingerprint": "ET1HlXpC1fA=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.llm_vpc",
            "google_compute_subnetwork.llm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "llm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Custom VPC for LLM project",
            "enable_ula_internal_ipv6": false,
            "id": "projects/zxiao-llm-project-2025/global/networks/llm-vpc",
            "mtu": 0,
            "name": "llm-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "zxiao-llm-project-2025",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "llm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-28T12:53:38.004-07:00",
            "description": "Subnet for LLM project resources",
            "gateway_address": "10.0.1.1",
            "id": "projects/zxiao-llm-project-2025/regions/us-central1/subnetworks/llm-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "llm-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/global/networks/llm-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "zxiao-llm-project-2025",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zxiao-llm-project-2025/regions/us-central1/subnetworks/llm-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.llm_vpc"
          ]
        }
      ]
    }
  ]
}